--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>🚀 Asteroid Tracker 🌌</h1>
-        <p>Track asteroids near Earth and see their potential impact.</p>
+        <p>Track asteroids near Earth, their impact chances, and their comparative size.</p>
         <button id="fetchAsteroids">Track Asteroids</button>
         <div id="asteroidData">
             <!-- Dynamic content will load here -->
