--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 <body>
     <div class="container">
         <h1>🚀 Asteroid Tracker 🌌</h1>
-        <p>Track asteroids near Earth, their impact chances, and their comparative size.</p>
+        <p>Track asteroids near Earth, their impact chances, and their size comparison.</p>
         <button id="fetchAsteroids">Track Asteroids</button>
-        <div id="asteroidData">
-            <!-- Dynamic content will load here -->
-        </div>
+        <div id="asteroidData"></div>
     </div>
     <script src="script.js"></script>
 </body>
